src/main/java/org/example/projectgestaltt/compiler/ProjectGestaltParser.java
// Generated from C:/Users/tulio/IdeaProjects/ProjectGestaltt/src/main/antlr4/ProjectGestalt.g4 by ANTLR 4.13.2

package org.example.projectgestaltt.compiler;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ProjectGestaltParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, GESTALT=22, REPLICANT=23, ENGAGE=24, 
		DISENGAGE=25, UNIT=26, MODEL=27, YORHA=28, WEISS=29, GLORY=30, POD=31, 
		FAITH=32, PASCAL=33, NIER=34, DIRECTIVE=35, OTHERWISE=36, MISSION=37, 
		SORTIE=38, HALT=39, REPORT=40, SCAN=41, TRUE=42, FALSE=43, IDENTIFICADOR=44, 
		ENTERO=45, DECIMAL=46, CADENA=47, COMENTARIO_LINEA=48, COMENTARIO_BLOQUE=49, 
		WS=50;
	public static final int
		RULE_programa = 0, RULE_sentencia = 1, RULE_declaracionVariable = 2, RULE_declaracionArreglo = 3, 
		RULE_asignacion = 4, RULE_impresion = 5, RULE_lectura = 6, RULE_condicional = 7, 
		RULE_cicloMission = 8, RULE_cicloSortie = 9, RULE_asignacionSortie = 10, 
		RULE_declaracionFuncion = 11, RULE_parametros = 12, RULE_llamadaFuncion = 13, 
		RULE_argumentos = 14, RULE_retorno = 15, RULE_halt = 16, RULE_tipo = 17, 
		RULE_expresion = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencia", "declaracionVariable", "declaracionArreglo", 
			"asignacion", "impresion", "lectura", "condicional", "cicloMission", 
			"cicloSortie", "asignacionSortie", "declaracionFuncion", "parametros", 
			"llamadaFuncion", "argumentos", "retorno", "halt", "tipo", "expresion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':='", "';'", "'['", "']'", "'('", "')'", "','", "'*'", "'/'", 
			"'%'", "'+'", "'-'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'&&'", 
			"'||'", "'!'", "'gestalt'", "'replicant'", "'engage'", "'disengage'", 
			"'unit'", "'model'", "'yorha'", "'weiss'", "'glory'", "'pod'", "'faith'", 
			"'pascal'", "'nier'", "'directive'", "'otherwise'", "'mission'", "'sortie'", 
			"'halt'", "'report'", "'scan'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "GESTALT", 
			"REPLICANT", "ENGAGE", "DISENGAGE", "UNIT", "MODEL", "YORHA", "WEISS", 
			"GLORY", "POD", "FAITH", "PASCAL", "NIER", "DIRECTIVE", "OTHERWISE", 
			"MISSION", "SORTIE", "HALT", "REPORT", "SCAN", "TRUE", "FALSE", "IDENTIFICADOR", 
			"ENTERO", "DECIMAL", "CADENA", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProjectGestalt.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProjectGestaltParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode GESTALT() { return getToken(ProjectGestaltParser.GESTALT, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(ProjectGestaltParser.IDENTIFICADOR, 0); }
		public TerminalNode ENGAGE() { return getToken(ProjectGestaltParser.ENGAGE, 0); }
		public TerminalNode DISENGAGE() { return getToken(ProjectGestaltParser.DISENGAGE, 0); }
		public TerminalNode REPLICANT() { return getToken(ProjectGestaltParser.REPLICANT, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectGestaltVisitor ) return ((ProjectGestaltVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(GESTALT);
			setState(39);
			match(IDENTIFICADOR);
			setState(40);
			match(ENGAGE);
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 21889233715200L) != 0)) {
				{
				{
				setState(41);
				sentencia();
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(DISENGAGE);
			setState(48);
			match(REPLICANT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public DeclaracionVariableContext declaracionVariable() {
			return getRuleContext(DeclaracionVariableContext.class,0);
		}
		public DeclaracionArregloContext declaracionArreglo() {
			return getRuleContext(DeclaracionArregloContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public ImpresionContext impresion() {
			return getRuleContext(ImpresionContext.class,0);
		}
		public LecturaContext lectura() {
			return getRuleContext(LecturaContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public CicloMissionContext cicloMission() {
			return getRuleContext(CicloMissionContext.class,0);
		}
		public CicloSortieContext cicloSortie() {
			return getRuleContext(CicloSortieContext.class,0);
		}
		public LlamadaFuncionContext llamadaFuncion() {
			return getRuleContext(LlamadaFuncionContext.class,0);
		}
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public HaltContext halt() {
			return getRuleContext(HaltContext.class,0);
		}
		public DeclaracionFuncionContext declaracionFuncion() {
			return getRuleContext(DeclaracionFuncionContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectGestaltVisitor ) return ((ProjectGestaltVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				declaracionVariable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				declaracionArreglo();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				asignacion();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(53);
				impresion();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(54);
				lectura();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(55);
				condicional();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(56);
				cicloMission();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(57);
				cicloSortie();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(58);
				llamadaFuncion();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(59);
				retorno();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(60);
				halt();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(61);
				declaracionFuncion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionVariableContext extends ParserRuleContext {
		public TerminalNode UNIT() { return getToken(ProjectGestaltParser.UNIT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(ProjectGestaltParser.IDENTIFICADOR, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public DeclaracionVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).enterDeclaracionVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).exitDeclaracionVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectGestaltVisitor ) return ((ProjectGestaltVisitor<? extends T>)visitor).visitDeclaracionVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionVariableContext declaracionVariable() throws RecognitionException {
		DeclaracionVariableContext _localctx = new DeclaracionVariableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracionVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(UNIT);
			setState(65);
			tipo();
			setState(66);
			match(IDENTIFICADOR);
			setState(67);
			match(T__0);
			setState(68);
			expresion(0);
			setState(69);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionArregloContext extends ParserRuleContext {
		public TerminalNode YORHA() { return getToken(ProjectGestaltParser.YORHA, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(ProjectGestaltParser.IDENTIFICADOR, 0); }
		public TerminalNode ENTERO() { return getToken(ProjectGestaltParser.ENTERO, 0); }
		public DeclaracionArregloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionArreglo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).enterDeclaracionArreglo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).exitDeclaracionArreglo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectGestaltVisitor ) return ((ProjectGestaltVisitor<? extends T>)visitor).visitDeclaracionArreglo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionArregloContext declaracionArreglo() throws RecognitionException {
		DeclaracionArregloContext _localctx = new DeclaracionArregloContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracionArreglo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(YORHA);
			setState(72);
			tipo();
			setState(73);
			match(IDENTIFICADOR);
			setState(74);
			match(T__2);
			setState(75);
			match(ENTERO);
			setState(76);
			match(T__3);
			setState(77);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(ProjectGestaltParser.IDENTIFICADOR, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).exitAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectGestaltVisitor ) return ((ProjectGestaltVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_asignacion);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				match(IDENTIFICADOR);
				setState(80);
				match(T__0);
				setState(81);
				expresion(0);
				setState(82);
				match(T__1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(IDENTIFICADOR);
				setState(85);
				match(T__2);
				setState(86);
				expresion(0);
				setState(87);
				match(T__3);
				setState(88);
				match(T__0);
				setState(89);
				expresion(0);
				setState(90);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImpresionContext extends ParserRuleContext {
		public TerminalNode REPORT() { return getToken(ProjectGestaltParser.REPORT, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public ImpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).enterImpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).exitImpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectGestaltVisitor ) return ((ProjectGestaltVisitor<? extends T>)visitor).visitImpresion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpresionContext impresion() throws RecognitionException {
		ImpresionContext _localctx = new ImpresionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_impresion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(REPORT);
			setState(95);
			match(T__4);
			setState(96);
			expresion(0);
			setState(97);
			match(T__5);
			setState(98);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LecturaContext extends ParserRuleContext {
		public TerminalNode SCAN() { return getToken(ProjectGestaltParser.SCAN, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(ProjectGestaltParser.IDENTIFICADOR, 0); }
		public LecturaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lectura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).enterLectura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).exitLectura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectGestaltVisitor ) return ((ProjectGestaltVisitor<? extends T>)visitor).visitLectura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LecturaContext lectura() throws RecognitionException {
		LecturaContext _localctx = new LecturaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_lectura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(SCAN);
			setState(101);
			match(T__4);
			setState(102);
			match(IDENTIFICADOR);
			setState(103);
			match(T__5);
			setState(104);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalContext extends ParserRuleContext {
		public TerminalNode DIRECTIVE() { return getToken(ProjectGestaltParser.DIRECTIVE, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public List<TerminalNode> ENGAGE() { return getTokens(ProjectGestaltParser.ENGAGE); }
		public TerminalNode ENGAGE(int i) {
			return getToken(ProjectGestaltParser.ENGAGE, i);
		}
		public List<TerminalNode> DISENGAGE() { return getTokens(ProjectGestaltParser.DISENGAGE); }
		public TerminalNode DISENGAGE(int i) {
			return getToken(ProjectGestaltParser.DISENGAGE, i);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public TerminalNode OTHERWISE() { return getToken(ProjectGestaltParser.OTHERWISE, 0); }
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).enterCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).exitCondicional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectGestaltVisitor ) return ((ProjectGestaltVisitor<? extends T>)visitor).visitCondicional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(DIRECTIVE);
			setState(107);
			match(T__4);
			setState(108);
			expresion(0);
			setState(109);
			match(T__5);
			setState(110);
			match(ENGAGE);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 21889233715200L) != 0)) {
				{
				{
				setState(111);
				sentencia();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(DISENGAGE);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OTHERWISE) {
				{
				setState(118);
				match(OTHERWISE);
				setState(119);
				match(ENGAGE);
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 21889233715200L) != 0)) {
					{
					{
					setState(120);
					sentencia();
					}
					}
					setState(125);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(126);
				match(DISENGAGE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CicloMissionContext extends ParserRuleContext {
		public TerminalNode MISSION() { return getToken(ProjectGestaltParser.MISSION, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode ENGAGE() { return getToken(ProjectGestaltParser.ENGAGE, 0); }
		public TerminalNode DISENGAGE() { return getToken(ProjectGestaltParser.DISENGAGE, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public CicloMissionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cicloMission; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).enterCicloMission(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGestaltListener ) ((ProjectGestaltListener)listener).exitCicloMission(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectGestaltVisitor ) return ((ProjectGestaltVisitor<? extends T>)visitor).visitCicloMission(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CicloMissionContext cicloMission() throws RecognitionException {
		CicloMissionContext _localctx = new CicloMissionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cicloMission);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(MISSION);
			setState(130);
			match(T__4);
			setState(131);
			expresion(0);
			setState(132);
			match(T__5);
			setState(133);
			match(ENGAGE);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 21889233715200L) != 0)) {
				{
				{
				setState(134);
				sentencia();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140);
			match(DISENGAGE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
